Fix "Startpage on mobile: Title and text in search field to small" #1573

--- a/imports/ui/pages/find/find.scss
+++ b/imports/ui/pages/find/find.scss
@@ -1,39 +1,8 @@
-.find-header {
-	@include make-row;
-}
-
-.find-header-heading {
-	@include make-xs-column(12);
-}
-
-$find-search-column-md: 7.5;
-
-.find-header-search {
-	@include td-make-sm-column(6);
-	@include td-make-md-column($find-search-column-md);
-}
-
-.filter-expanded > .find-header-search {
-	@include make-xs-column(12);
-}
-
-.find-header-filter {
-	@include make-xs-column(12);
-	@include td-make-sm-column(6);
-	@include td-make-md-column(12 - $find-search-column-md);
-}
-
-.filter-expanded > .find-header-filter {
-	@include make-xs-column(12);
-	margin-bottom: 15px;
-}
-
 .find-heading {
 	color: $blue;
 	margin-top: 0;
 
 	@media (max-width: $screen-xs-max) {
-		font-size: x-large;
 		margin: 0 0 10px;
 	}
 }
